Tue Feb  6 10:55:26 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* tests/numbers/Makefile.am: fixed the EXTRA stuff

Mon Feb  5 22:02:24 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* Copyright IPR Makefile.am: added some wording and a rewrite
	  of the W3C IPR but without giving Copyright rights to W3C,
	  should suit everybody

Mon Feb  5 18:58:17 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* FEATURES: updated, added mode support for templates
	* pattern.[ch] transform.c xslt.c xsltInternals.h: added mode
	  support for templates
	* templates.c variables.c: simple fixes
	* xslt.c: added a separate DEBUG_BLANKS debug class disabled
	* xsltproc.c: added option -timing
	* xsltutils.c: seem I forgot to add encoding support in output...
	* configure.in tests/Makefile.am tests/xmlspec/*: added a test
	  consisting of reformatting the XML REC with the xmlspec XSLT,
	  heavy !

Mon Feb  5 18:43:37 CET 2001 Bjorn Reese <breese@users.sourceforge.net>

	* FEATURES: updated
	* numbers.c: handles actual number formatting for both xsl:number
	  and the format-number extension function.
	* function.c: formatting moved to numbers.c
	* transform.c: added xsl:number
	* xslt.c: minor memory leak removed
	* Makefile.am: added numbers.c and numbersInternals.h

Sat Feb  3 21:49:36 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* TODO: updated
	* doc/html/*.html updated
	* doc/libxslt.sgml: added new modules
	* libxslt/pattern.c: fix loop on hash clashes.

Sat Feb  3 16:13:35 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* FEATURES: updated
	* imports.c: bugfix
	* pattern.c: lots of changes to make most patterns work
	* templates.[ch]: added xsltEvalXPathPredicate() for predicate testing
	* transform.c: cleanup and attribute patterns testing
	* xslt.c: added xsltFreeStylesheetList() and now cleanup
	  the imports
	* tests/REC/test-2.3* tests/REC/test-2.6.2*: more tests
	* tests/REC/test-5.2-*: 18 pattern tests from the spec, all should
	  work now.